# ios-activity-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  start
src/ios_activity_monitor/: __main__.py  sysmon.py  tui.py  web.py
src/ios_activity_monitor/static/: app.js  devices.js  index.html  processes.js  style.css
